--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,19 @@
             <artifactId>camel-ftp</artifactId>
             <version>3.0.1</version>
         </dependency>
-      <dependency>
+      <!--<dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-zipfile-starter</artifactId>
         <version>3.0.0-RC3</version>
+
+      </dependency>-->
+
+      <dependency>
+        <groupId>org.apache.camel.springboot</groupId>
+        <artifactId>camel-zip-deflater-starter</artifactId>
+        <version>3.0.1</version>
         <!-- use the same version as your Camel core version -->
-    </dependency>
+      </dependency>
     
 
         <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-http-starter -->
